--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,11 @@ body {
 .clip-polygon {
   clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);
 }
+/* Hide scrollbar globally */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  scrollbar-width: none;
+}
