form issue adn checkbox issue of contact form fixed

--- a/src/app/styles/Contact.module.css
+++ b/src/app/styles/Contact.module.css
@@ -111,6 +111,9 @@ padding: 40px 37vh;
   flex-wrap: wrap;
   gap: 15px;
 }
+.checkbox{
+  width: 10px;
+}
 
 @media (max-width: 768px) {
   .contact_container {
